feat 删除JavaFX、图片改为前端上传、包名改为cn.sleepybear、升级为Java21、加入样例